src/objects/Costs__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billable_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billable Party</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Costs (Billable Party)</relationshipLabel>
        <relationshipName>Costs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF( RecordType.Name  = &apos;Cost&apos;,Searches__r.Placement__r.Approved_Through_Date__c,Searches__r.Placement__r.Move_In_Date__c)</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Landlord_Monthly_Amount__c</fullName>
        <label>Landlord Monthly Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_Amount__c</fullName>
        <formula>IF(ISPICKVAL(Prorate_Type__c ,&apos;Daily&apos;) ,  Amount__c * 30 , Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Monthly Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payable_Party_Is_Landlord_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payable Party Is Landlord 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payable_Party__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Payable Party</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Costs (Payable Party)</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payable_Party_is_Landlord__c</fullName>
        <formula>Payable_Party__c ==  Searches__r.Landlord__c</formula>
        <label>Payable Party is Landlord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Prorate_Type__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeName__c</fullName>
        <formula>RecordType.Name</formula>
        <label>RecordTypeName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Searches__c</fullName>
        <label>Search</label>
        <referenceTo>Searches__c</referenceTo>
        <relationshipLabel>Costs</relationshipLabel>
        <relationshipName>Costs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Searches__r.Placement__r.Move_In_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type_Description__c</fullName>
        <label>Description</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADA Accommodation Fee</fullName>
                </value>
                <value>
                    <fullName>Administration Fee</fullName>
                </value>
                <value>
                    <fullName>Amenity Fee</fullName>
                </value>
                <value>
                    <fullName>Application Fee</fullName>
                </value>
                <value>
                    <fullName>Break Lease Fee</fullName>
                </value>
                <value>
                    <fullName>Broker Fee</fullName>
                </value>
                <value>
                    <fullName>Certificate of Occupancy Fee</fullName>
                </value>
                <value>
                    <fullName>Cleaning Fee</fullName>
                </value>
                <value>
                    <fullName>Cleaning Service</fullName>
                </value>
                <value>
                    <fullName>Delivery Fee</fullName>
                </value>
                <value>
                    <fullName>Dozer Fee</fullName>
                </value>
                <value>
                    <fullName>Electric – A/C Hook Up Fee</fullName>
                </value>
                <value>
                    <fullName>Elevator Fee</fullName>
                </value>
                <value>
                    <fullName>External Holding Tank Fee</fullName>
                </value>
                <value>
                    <fullName>Fencing Fee</fullName>
                </value>
                <value>
                    <fullName>Furniture Deposit</fullName>
                </value>
                <value>
                    <fullName>Garage Remote Fee</fullName>
                </value>
                <value>
                    <fullName>HOA Fee</fullName>
                </value>
                <value>
                    <fullName>Houseware Kit</fullName>
                </value>
                <value>
                    <fullName>Houseware Set Up Fee</fullName>
                </value>
                <value>
                    <fullName>Injector Pump</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Key Deposit</fullName>
                </value>
                <value>
                    <fullName>Landscaping</fullName>
                </value>
                <value>
                    <fullName>Late Fee</fullName>
                </value>
                <value>
                    <fullName>Liberty Mutual CRS Moving Service Fee</fullName>
                </value>
                <value>
                    <fullName>Liberty Mutual Moving Fee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Pet Deposit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Costs</label>
    <nameField>
        <displayFormat>Cost-{0000000}</displayFormat>
        <label>Cost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Costs</pluralLabel>
    <recordTypes>
        <fullName>Cost</fullName>
        <active>true</active>
        <label>Cost</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deposit</fullName>
        <active>true</active>
        <label>Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Fee</fullName>
        <active>true</active>
        <label>Fee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Furniture_Deposit</fullName>
        <active>true</active>
        <label>Furniture Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Furniture_Fee</fullName>
        <active>true</active>
        <label>Furniture Fee</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>